--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,13 @@ jobs:
                   name: target
                   path: target/
 
+            - name: SonarCloud Scan
+              run: mvn sonar:sonar
+              env:
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+                SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+                SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
+
     docker-build-push:
         needs: build
         runs-on: ubuntu-latest
@@ -184,16 +191,16 @@ jobs:
                   rules_file_name: ".zap/rules.tsv"
                   cmd_options: "-a"
 
-    sonarcloud:
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@v3
-        with:
-          # Disabling shallow clone is recommended for improving relevancy of reporting
-          fetch-depth: 0
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # sonarcloud:
+    #   runs-on: ubuntu-latest
+    #   steps:
+    #   - uses: actions/checkout@v3
+    #     with:
+    #       # Disabling shallow clone is recommended for improving relevancy of reporting
+    #       fetch-depth: 0
+    #   - name: SonarCloud Scan
+    #     uses: sonarsource/sonarcloud-github-action@master
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
                 
