--- a/pom.xml
+++ b/pom.xml
@@ -658,6 +658,11 @@
           <target>17</target>
         </configuration>
       </plugin>
+      <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.7.0.1746</version>
+        </plugin>      
     </plugins>
   </build>
 
