--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,14 +36,14 @@ jobs:
                   path: target/
 
             - name: SonarCloud Scan
-              run: mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io
+              run: mvn sonar:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
                 SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
                 SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
 
-
+                
     docker-build-push:
         needs: build
         runs-on: ubuntu-latest
