running full pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -139,7 +139,7 @@ jobs:
     build-infrastructure:
       needs: [lint-terraform, trivy-scan]
       runs-on: ubuntu-latest
-      if: github.event_name == 'pull_request'
+      # if: github.event_name == 'pull_request'
       defaults:
           run:
               shell: bash
