added continue on error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -171,6 +171,7 @@ jobs:
             run: terraform destroy -auto-approve
 
           - name: Apply Terraform Changes
+            continue-on-error: true
             run: terraform apply -auto-approve
 
     zap_scan:
